--- a/buttons.html
+++ b/buttons.html
@@ -1,6 +1,6 @@
 <style>
   .subscribe-button {
-    background-color:rgb(204, 0, 0);
+    background-color: rgb(204, 0, 0);
     color: white;
     border: none;
     height: 36px;
@@ -32,19 +32,12 @@
     border-radius: 18px;
     font-weight: bold;
     font-size: 15px;
-    cursor: pointer; 
+    cursor: pointer;
   }
-
 </style>
 
-<button class="subscribe-button">
-  SUBSCRIBE
-</button>
+<button class="subscribe-button">SUBSCRIBE</button>
 
-<button class="join-button">
-  JOIN
-</button>
+<button class="join-button">JOIN</button>
 
-<button class="tweet-button">
-  Tweet
-</button>
+<button class="tweet-button">Tweet</button>
