--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>lesson#1</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>lesson#1</title>
 
     <style>
       button {
@@ -12,31 +12,25 @@
         cursor: pointer;
       }
     </style>
-
-</head>
+  </head>
 
   <body>
+    <button>Start</button>
 
-    <button>
-      Start
-    </button>
+    <p>My first web page</p>
 
-    <p>
-      My first web page
-    </p>
+    <ol>
+      <p>City names</p>
+      <li>Karachi</li>
+      <li>Lahore</li>
+      <li>Peshawer</li>
+      <li>Quetta</li>
+      <li>Hyderabad</li>
+    </ol>
 
-      <ol>
-        <p>City names</p>
-        <li>Karachi</li>
-        <li>Lahore</li>
-        <li>Peshawer</li>
-        <li>Quetta</li>
-        <li>Hyderabad</li>
-      </ol>
-
-      <ul>
-        <li><a href="https://www.facebook.com/">Facebook</a></li>
-        <li><a href="https://www.youtube.com/" target="_blank">Youtube</a></li>
-      </ul>  
-  
+    <ul>
+      <li><a href="https://www.facebook.com/">Facebook</a></li>
+      <li><a href="https://www.youtube.com/" target="_blank">Youtube</a></li>
+    </ul>
   </body>
+</html>
